--- a/Sobre.html
+++ b/Sobre.html
@@ -3,86 +3,115 @@
 
   <head>
     <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="css/header_footer.css">
     <meta charset="utf-8">
     <title>Mirror Fashion</title>
   </head>
 
   <body>
-    <header>
+    <header class="header container">
+
+      <div class="header--itens header--logo">
+        <figure>
+          <img src="img/logo.png" alt="Mirror Fashion Logo">
+        </figure>
+      </div>
+
+      <div class="header--itens header--compras">
+        <p class="sacola">SACOLA DE COMPRAS</p>
+      </div>
+
+      <div class="header--itens header-lista">
+
+        <ul class="header--itens--lista">
+          <li><a href="">Sua Conta</a></li>
+          <li><a href="">Lista de Desejos</a></li>
+          <li><a href="">Cartão Fidelidade</a></li>
+          <li><a href="">Sobre</a></li>
+          <li><a href="">Ajuda</a></li>
+        </ul>
+
+      </div>
 
     </header>
     <main>
-      <img src="img/logo.png" alt="Logo da Mirror Fashion">
-      <h1>A Mirror Fashion</h1>
+      <article class="">
+        <section>
+          <h1>A Mirror Fashion</h1>
 
-        <p>
-        A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.
-        Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
-        participação em 118 deles.
-        </p>
+            <p>
+            A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.
+            Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
+            participação em 118 deles.
+            </p>
 
-        <p>
-        Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho</a>, no Paraná. De lá, saem 48 aviões que
-        distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
-        </p>
+            <p>
+            Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho</a>, no Paraná. De lá, saem 48 aviões que
+            distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
+            </p>
 
-        <figure id="centro-distribuição">
-          <img src=img/centro-distribuicao.png alt="centro de distribuição">
-          <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
-        </figure>
+            <figure id="centro-distribuição">
+              <img src=img/centro-distribuicao.png alt="centro de distribuição">
+              <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
+            </figure>
 
-        <p>
-        Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato
-        se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.
-        </p>
+            <p>
+            Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato
+            se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.
+            </p>
+        </section>
 
+        <section>
+          <h2 id="historia">História</h2>
 
-      <h2 id="historia">História</h2>
+            <figure id="familia-pelho">
+              <img src="img/familia-pelho.jpg" alt="Foto da Familia Pelho">
+              <figcaption>Foto da Fámilia Pelho</figcaption>
+            </figure>
 
-        <figure id="familia-pelho">
-          <img src="img/familia-pelho.jpg" alt="Foto da Familia Pelho">
-          <figcaption>Foto da Fámilia Pelho</figcaption>
-        </figure>
+            <p>
+            A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A
+            família <em>Pelho</em>, tradicional da região, investiu todas as suas economias nessa nova iniciativa,
+            revolucionária para a época. O fundador <em>Eduardo Simões Pelho</em>, dotado de particular visão
+            administrativa, guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado
+            de seu filho <em>E. S. Pelho Filho</em>, atual CEO. O nome da empresa é inspirado no nome da família.
+            </p>
 
-        <p>
-        A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A
-        família <em>Pelho</em>, tradicional da região, investiu todas as suas economias nessa nova iniciativa,
-        revolucionária para a época. O fundador <em>Eduardo Simões Pelho</em>, dotado de particular visão
-        administrativa, guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado
-        de seu filho <em>E. S. Pelho Filho</em>, atual CEO. O nome da empresa é inspirado no nome da família.
-        </p>
+            <p>
+            O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já atendia 18 países.
+            Bateu a marca de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 740 milhões
+            de usuários diferentes, em bilhões de diferentes pedidos.
+            </p>
 
-        <p>
-        O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já atendia 18 países.
-        Bateu a marca de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 740 milhões
-        de usuários diferentes, em bilhões de diferentes pedidos.
-        </p>
+            <p>
+            O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do
+            Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do
+            Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Jacarezinho e
+            nos escritórios em todo país.
+            </p>
 
-        <p>
-        O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do
-        Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do
-        Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Jacarezinho e
-        nos escritórios em todo país.
-        </p>
+            <p>
+            Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
+            homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
+            Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
+            </p>
+        </section>
 
-        <p>
-        Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
-        homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
-        Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
-        </p>
+        <section>
+          <h2 id="diferenciais"> Diferenciais </h2>
+          <ul>
+            <li>Menor preço do varejo, garantido</li>
+            <li>Se você achar uma loja mais barata, leva o produto de graça</li>
+            <li>Pague em reais, dólares, euros ou bitcoins</li>
+            <li>Todas as compras com frete grátis para o mundo todo</li>
+            <li>Maior comércio eletrônico de moda do mundo</li>
+            <li>Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
+            <li>Presente em 124 países</li>
+            <li>Mais de um milhão de funcionários em todo o mundo</li>
+          </ul>
+        </section>
 
-
-        <h2 id="diferenciais"> Diferenciais </h2>
-        <ul>
-          <li>Menor preço do varejo, garantido</li>
-          <li>Se você achar uma loja mais barata, leva o produto de graça</li>
-          <li>Pague em reais, dólares, euros ou bitcoins</li>
-          <li>Todas as compras com frete grátis para o mundo todo</li>
-          <li>Maior comércio eletrônico de moda do mundo</li>
-          <li>Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
-          <li>Presente em 124 países</li>
-          <li>Mais de um milhão de funcionários em todo o mundo</li>
-        </ul>
+      </article>
 
       <div id="rodapé">
         <img src="img/logo.png" alt="logo da Mirror Fashion">
@@ -91,7 +120,41 @@
       </div>
 
     </main>
-    <footer>
+
+    <footer class="rodape">
+
+      <div class="container_footer">
+        <div class="">
+          <figure>
+            <img src="img/logo-rodape.png" alt="logo_rodape">
+          </figure>
+
+        </div>
+        <div class="redes_sociais">
+          <ul class="redes_sociais--lista">
+            <li class="redes_sociais--itens">
+              <figure>
+                <a href="http://facebook.com/mirrorfashion">"<img src="img/facebook.png" alt="facebook"></a>
+              </figure>
+
+            </li>
+            <li class="redes_sociais--itens">
+              <figure>
+                <a href="http://twitter.com/mirrorfashion"><img src="img/twitter.png" alt="twitter"></a>
+              </figure>
+
+            </li>
+            <li class="redes_sociais--itens">
+              <figure>
+                <a href="http://googleplus.com/mirrorfashion"><img src="img/googleplus.png" alt="googleplus"></a>
+              </figure>
+
+            </li>
+          </ul>
+
+        </div>
+
+      </div>
 
     </footer>
 
