--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/index.css">
     <title>MIRROR FASHION INDEX</title>
@@ -207,7 +208,7 @@
       <footer class="rodape">
 
         <div class="container_footer">
-          <div class="">
+          <div class="imagem_logo_footer">
             <figure>
               <img src="img/logo-rodape.png" alt="logo_rodape">
             </figure>
@@ -215,19 +216,19 @@
           </div>
           <div class="redes_sociais">
             <ul class="redes_sociais--lista">
-              <li class="redes_sociais--itens">
+              <li class="facebook">
                 <figure>
                   <a href="http://facebook.com/mirrorfashion">"<img src="img/facebook.png" alt="facebook"></a>
                 </figure>
 
               </li>
-              <li class="redes_sociais--itens">
+              <li class="twitter">
                 <figure>
                   <a href="http://twitter.com/mirrorfashion"><img src="img/twitter.png" alt="twitter"></a>
                 </figure>
 
               </li>
-              <li class="redes_sociais--itens">
+              <li class="googleplus">
                 <figure>
                   <a href="http://googleplus.com/mirrorfashion"><img src="img/googleplus.png" alt="googleplus"></a>
                 </figure>
