--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/header_footer.css">
-    <link rel="stylesheet" href="css/produto.css">
+    <link rel="stylesheet" href="css/produtos.css">
     <title>MIRROR FASHION INDEX</title>
   </head>
   <body>
@@ -39,7 +39,28 @@
     </header>
 
     <main>
-
+      <div class="produto">
+        <h1>Fuzzy Cardigan</h1>
+          <p>por apenas R$ 129,90</p>
+        <form>
+          <fieldset class="cores">
+            <legend>Escolha a cor:</legend>
+              <input type="radio" name="cor" value="verde" id="verde" checked>
+              <label for="verde">
+                <img src="img/produtos/foto1-verde.png" alt="Produto na cor verde">
+              </label>
+              <input type="radio" name="cor" value="rosa" id="rosa">
+              <label for="rosa">
+                <img src="img/produtos/foto1-rosa.png" alt="Produto na cor rosa">
+              </label>
+              <input type="radio" name="cor" value="azul" id="azul">
+              <label for="azul">
+                  <img src="img/produtos/foto1-azul.png" alt="Produto na cor azul">
+              </label>
+          </fieldset>
+          <button class="comprar">Comprar</button>
+        </form>
+        </div>
 
     </main>
       <footer class="rodape">
