--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
         <section class="banner_destaques">
           <figure>
-            <img src="img/destaque-home.png" alt="destaques-home">
+            <img class="banner_selector" src="img/destaque-home.png" alt="destaques-home">
+            <a href="#" class="pause"></a>
           </figure>
         </section>
 
@@ -147,38 +148,38 @@
             <ol>
 
               <li>
+                <a href="produto.html">
+                  <figure>
+                    <img src="img/produtos/miniatura7.png" alt="miniatura1">
+                    <figcaption>t-shirt funny R$ 69,90</figcaption>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
+                <a href="produto.html">
+                  <figure>
+                    <img src="img/produtos/miniatura8.png" alt="miniatura1">
+                    <figcaption>t-shirt sexy por R$ 59,90</figcaption>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
               <a href="produto.html">
-              <figure>
-              <img src="img/produtos/miniatura7.png" alt="miniatura1">
-              <figcaption>t-shirt funny R$ 69,90</figcaption>
-              </figure>
+                <figure>
+                  <img src="img/produtos/miniatura9.png" alt="miniatura1">
+                  <figcaption>camisa funny R$ 99,90</figcaption>
+                </figure>
               </a>
               </li>
 
               <li>
               <a href="produto.html">
-              <figure>
-              <img src="img/produtos/miniatura8.png" alt="miniatura1">
-              <figcaption>t-shirt sexy por R$ 59,90</figcaption>
-              </figure>
-              </a>
-              </li>
-
-              <li>
-              <a href="produto.html">
-              <figure>
-              <img src="img/produtos/miniatura9.png" alt="miniatura1">
-              <figcaption>camisa funny R$ 99,90</figcaption>
-              </figure>
-              </a>
-              </li>
-
-              <li>
-              <a href="produto.html">
-              <figure>
-              <img src="img/produtos/miniatura10.png" alt="miniatura1">
-              <figcaption>blusa ml funny por R$ 69,90</figcaption>
-              </figure>
+                <figure>
+                <img src="img/produtos/miniatura10.png" alt="miniatura1">
+                <figcaption>blusa ml funny por R$ 69,90</figcaption>
+                </figure>
               </a>
               </li>
 
@@ -241,5 +242,6 @@
         </div>
 
       </footer>
+      <script type="text/javascript" src="js/banner.js"></script>
   </body>
 </html>
