--- a/checkout.html
+++ b/checkout.html
@@ -62,9 +62,21 @@
                   <dt>Tamanho</dt>
                     <dd>40</dd>
                   <dt>Preço</dt>
-                    <dd>R$ 129,90</dd>
+                    <dd id="preco">R$ 129,90</dd>
                   </dl>
               </div>
+            </div>
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="qtd">Quantidade:</label>
+                    <input type="number" id="qtd" min="1" max="99" value="1" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <label for="total">Total:</label>
+                    <output for="qtd preco" id="total" class="form-control">R$ 129,90</output>
+                  </div>
+                </div>
             </div>
           </div>
 
@@ -164,7 +176,9 @@
     <footer>
 
     </footer>
+    <script type="text/javascript" src="js/total.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
   </body>
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+
 </html>
