--- a/produtos.html
+++ b/produtos.html
@@ -144,6 +144,6 @@
         </div>
 
       </footer>
-      <script type="text/javascript" src="js/produto.js"></script>
+      <script type="text/javascript" src="js/produtos.js"></script>
   </body>
 </html>
