--- a/Sobre.html
+++ b/Sobre.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" dir="ltr">
 
   <head>
-    <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/header_footer.css">
     <meta charset="utf-8">
     <title>Mirror Fashion</title>
